# Prism-protein-cage

./: .gitignore  README.md  pyproject.toml
data/example_pdbs/: .gitkeep
data/reference_cages/: .gitkeep
notebooks/: 01_cage_geometry_demo.py  02_build_protein_cage.py  03_rfd2_cage_pipeline.py  04_encapsulin_cage_pipeline.py  05_mpnn_bindcraft_pipeline.py  06_bindcraft_glue_binders.py  generate_enhanced_viewer.py
output/cage_design/: cage_assembly_sequences.fasta  cage_viewer.html  designed_sequences.fasta
output/designed_cages/: all_designed_sequences.fasta  bindcraft_glue_results.json  pipeline_results.json
output/encapsulin_cage_results/: design_summary.json  encapsulin_cage_viewer.html
output/rfd2_cage_designs/: cage_T_0-atomized-bb-False.trb  cage_T_1-atomized-bb-False.trb  cage_T_2-atomized-bb-False.trb  cage_T_3-atomized-bb-False.trb
output/rfd2_cage_results/: design_summary.json  rfd2_cage_viewer.html
output/rfd2_encapsulin/: encap_T_0-atomized-bb-False.trb  encap_T_1-atomized-bb-False.trb  encap_T_2-atomized-bb-False.trb  encap_T_3-atomized-bb-False.trb  encap_force_0-atomized-bb-False.trb  encap_force_1-atomized-bb-False.trb  encap_force_2-atomized-bb-False.trb  encap_force_3-atomized-bb-False.trb
output/rfd2_test/: test_0-atomized-bb-False.trb
python/prism/: __init__.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/geometry/: cavity.rs  mod.rs  polyhedra.rs  symmetry.rs  transforms.rs
rust/src/lattice/: assembly.rs  docking.rs  mod.rs
rust/src/spatial/: kdtree.rs  mod.rs  sasa.rs
tests/: smoke_test.py  test_prism.py
(+50 files in other folders)
